Cifrado y Descifrado terminado,Avanzando Css y test

--- a/src/decodificar.html
+++ b/src/decodificar.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <!--Caja contender del codificado-->
+    <!--Caja contender del decodificado-->
     <div >
     <p>Ingrese Su Mensaje:</p>
     <textarea id="mensajede" placeholder="Su mensaje aquí..."></textarea>
@@ -17,7 +17,7 @@
     <input type="number" id="offde" >
 
     <button id="btnde">Decodifica tu Mensaje</button>
-    <textarea id="mensajede2" ></textarea>
+    <textarea id="mensaje2de" ></textarea>
 
     <!--Botones direccionales -->
     <button onclick="location.reload();">Limpiar</button>
