--- a/src/inicio.html
+++ b/src/inicio.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Caesar Cipher</title>
+    <title> Caesar Cipher </title>
       <script src="inicio.js"></script>
       <!--logo de laboratoria al lado de nuestro título-->
       <link rel="icon" href="img/laboratoria.ico">
@@ -14,10 +14,10 @@
       <a href="#"><img src="img/fondo.png"  alt="" width="1399"height="200"></a>
 
       <center>
-        
+
       <h1>Cifrado César</h1>
       <label class="texto">Ingresa tu nombre</label>
-      <input type="text" placeholder="Nombre" class="name"id="name" >
+      <input type="text" id="name" >
       <button class="boton" onclick="myFunction()">Ir</button>
       </div>
 
@@ -29,6 +29,7 @@
       <!-- Botóm direccional -->
       <center>
       <button id="btn" onclick="location.href='options.html'">Ingresar</button>
+      </center>
       <!-- Función para el botón -->
       <script type="text/javascript">
       mybutton= () => {
@@ -38,5 +39,6 @@
 
       }
       </script>
-
-  </body>
+    </center>
+    </body>
+  </html>
