--- a/src/codificado.html
+++ b/src/codificado.html
@@ -22,7 +22,7 @@
 
   <!--Botones direccionales -->
   <button onclick="location.reload();" >Limpiar</button>
-  <button onclick="location.href='inicio.html'">Salir</button>
+  <button onclick="location.href='index.html'">Salir</button>
   <button onclick="location.href='decodificar.html'">Descifrar</button>
   </div>
 
