--- a/src/decodificar.html
+++ b/src/decodificar.html
@@ -21,7 +21,7 @@
 
     <!--Botones direccionales -->
     <button onclick="location.reload();">Limpiar</button>
-    <button id="btn" onclick="location.href='inicio.html'">Salir</button>
+    <button id="btn" onclick="location.href='index.html'">Salir</button>
     </div>
 
     <!--Archivo JS-->
