--- a/src/options.html
+++ b/src/options.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Options</title>
      <link rel="icon" href="img/laboratoria.ico">
   </head>
   <body>
@@ -19,5 +19,7 @@
     <button onclick="location.href='decodificar.html'">Descifrar</button>
 
 
+    </center>
+    </center>
   </body>
 </html>
