Renombrando archivo html

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
   </head>
 
   <body>
-      <!--Primera interface-->
+      <!--Primera interface 2-->
       <div id="biography">
-      
 
-      <center>
+
+
 
       <h1>Cifrado César</h1>
-      <label class="texto">Ingresa tu nombre</label>
+      <label class="texto">Ingresa tu nombre:</label>
       <input type="text" id="name" >
       <button class="boton" onclick="myFunction()">Ir</button>
       </div>
@@ -27,9 +27,9 @@
       </div>
 
       <!-- Botóm direccional -->
-      <center>
+
       <button id="btn" onclick="location.href='options.html'">Ingresar</button>
-      </center>
+
       <!-- Función para el botón -->
       <script type="text/javascript">
       mybutton= () => {
@@ -39,6 +39,6 @@
 
       }
       </script>
-    </center>
+
     </body>
   </html>
