--- a/src/options.html
+++ b/src/options.html
@@ -4,22 +4,48 @@
     <meta charset="utf-8">
     <title>Options</title>
      <link rel="icon" href="img/laboratoria.ico">
+     <link rel="stylesheet" href="style.css">
+
   </head>
-  <body>
-    <center>
+  <body  id="contenedor">
+
+
 
       <!--Cabecera-->
       <header >
-          <h1>Cifrado Cesar</h1>
-          <p><i>Codifica y Decodifica tus mensajes</i></p>
+
+        <img id="image" src="img/banner.jpg" >
+        <center>
+        <h2 class="header-title"><i>Codifica y Decodifica tus mensajes</i></h2>
+      </center>
       </header>
-      <!--Botones direccionales -->
-    <center>
-    <button onclick="location.href='codificado.html'">Cifrar</button>
-    <button onclick="location.href='decodificar.html'">Descifrar</button>
 
+  <center>
+      <section id="main">
+  <center>
+    <div class="responsive">
+        <h3 align="justify"><em>Instrucciones:</em></h3>
+        <br>
+        <h5 align="justify">1. Elige una opción.</h5>
+        <h5 align="justify">2. En la opción cifrar copie tu mensaje codificado y utilizalo en el descifrado.</h5>
+        <h5 align="justify">3. Descifre el mensaje </h5>
+        <h5 align="justify">4. Pulse en el botón Programar. </h5>
+        <h5 align="justify">5. ¡Comience a programar en la platarforma de front-end! </h5>
+<br>
+<br>
+   <h3 align="justify"><em>Opciones:</em></h3>
+  <!--Botones direccionales -->
+    <button  onclick="location.href='codificado.html'" class="btn2">Cifrar</button>
+    <button  onclick="location.href='decodificar.html'" class="btn2">Descifrar</button>
+    </div>
+    </center>
+  </section>
 
-    </center>
-    </center>
+</center>
+
+  <footer id="pieprincipal">
+    <small>Derechos reservados</small>
+  </footer>
+
   </body>
 </html>
